[gd_scene load_steps=6 format=3]

[ext_resource type="Texture2D" uid="uid://x7wjvyna12ml" path="res://main/ui/theme/panel/triangle_corner.png" id="1_g37vp"]
[ext_resource type="Theme" uid="uid://ngj4frvw6klg" path="res://main/ui/theme/main_theme.tres" id="1_ysm2p"]
[ext_resource type="Script" path="res://main/ui/components/choice_handler/choice_handler.gd" id="2_5wy08"]
[ext_resource type="PackedScene" uid="uid://d08fdqmpty7rh" path="res://main/ui/components/choice_handler/choice_button/ChoiceButton.tscn" id="4_aqaso"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8vklf"]
content_margin_left = 8.0
content_margin_top = 2.0
content_margin_right = 8.0
content_margin_bottom = 0.0
bg_color = Color(0.0313726, 0.0313726, 0.0313726, 1)

[node name="ChoiceHandler" type="HBoxContainer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -20.0
offset_right = 40.0
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(0, 20)
size_flags_horizontal = 4
size_flags_vertical = 8
theme = ExtResource("1_ysm2p")
theme_override_constants/separation = 0
script = ExtResource("2_5wy08")

[node name="LeftPadding" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
texture = ExtResource("1_g37vp")
stretch_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_styles/panel = SubResource("StyleBoxFlat_8vklf")

[node name="ButtonContainer" type="HBoxContainer" parent="PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
theme_override_constants/separation = 2

[node name="ChoiceButton" parent="PanelContainer/ButtonContainer" instance=ExtResource("4_aqaso")]
layout_mode = 2

[node name="RightPadding" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 8
texture = ExtResource("1_g37vp")
stretch_mode = 2
flip_h = true
